# VoxSentinel

./: .dockerignore  .env.example  .gitignore  Agent.md  DEMO_GUIDE.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  create_tables.py  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  start-all.bat  start-api.bat  start-dashboard.bat  start-tunnels.bat
cookies/: vidcookie.txt
docs/: api-reference.md  asr-backend-guide.md  deployment.md  keyword-rule-guide.md
docs/runbooks/: backup-restore.md  incident-response.md  scaling.md
helm/transcriptguard/: Chart.yaml  values.prod.yaml  values.yaml
helm/transcriptguard/templates/: alert-deployment.yaml  (+8 more)
proto/transcriptguard/: alerts.proto  asr.proto  common.proto
samples/: NDTV - Rohit Shetty Firing ｜ Bishnoi Gang Claims Gunfire Outside Rohit Shetty's Juhu Home.m4a
scripts/: _init_db.py  benchmark_asr.py  generate_test_audio.py  load_test.py  seed_db.py  seed_legislation_rules.py  test_vad_read.py
services/alerts/: Dockerfile  pyproject.toml
services/alerts/src/alerts/: __init__.py  dispatcher.py  health.py  main.py  retry.py  throttle.py
services/alerts/src/alerts/channels/: __init__.py  base.py  email_channel.py  signal_channel.py  slack_channel.py  sms_channel.py  teams_channel.py  webhook_channel.py  websocket_channel.py
services/alerts/tests/: conftest.py  test_dispatcher.py  test_slack_channel.py  test_throttle.py  test_webhook_channel.py  test_websocket_channel.py
services/api/: Dockerfile  pyproject.toml
services/api/src/api/: __init__.py  dependencies.py  main.py
services/api/src/api/middleware/: auth.py  cors.py  logging.py  rate_limit.py
services/api/src/api/routers/: __init__.py  alert_channels.py  alerts.py  audit.py  file_analyze.py  health.py  rules.py  search.py  streams.py  transcripts.py  ws.py  youtube.py
services/api/src/api/schemas/: __init__.py  alert_schemas.py  file_analyze_schemas.py  rule_schemas.py  search_schemas.py  stream_schemas.py  transcript_schemas.py
services/api/tests/: conftest.py  test_alerts_router.py  test_audit_router.py  test_health.py  test_rules_router.py  test_search_router.py  test_streams_router.py
services/asr/: Dockerfile  pyproject.toml
services/asr/src/asr/: __init__.py  engine_base.py  engine_registry.py  failover.py  health.py  main.py  router.py
services/asr/src/asr/engines/: __init__.py  assemblyai.py  canary_qwen.py  deepgram_nova2.py  lightning_asr.py  parakeet_tdt.py  riva.py  whisper_v3_turbo.py
services/asr/tests/: conftest.py  test_deepgram_nova2.py  test_engine_base.py  test_engine_registry.py  test_failover.py  test_health.py  test_router.py  test_whisper_v3_turbo.py
services/dashboard/: Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
services/dashboard/src/: App.tsx  index.css  main.tsx
services/dashboard/src/components/dashboard/: AlertPanel.tsx  DashboardShell.tsx  Sidebar.tsx  StreamCard.tsx  TranscriptViewer.tsx
services/dashboard/src/components/landing/: FeaturesGrid.tsx  Footer.tsx  Hero.tsx  IntroReveal.tsx  Preloader.tsx  StatsBanner.tsx  StickyPipeline.tsx
services/dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx
services/dashboard/src/dashboard/: __init__.py  app.py  ws_client.py
services/dashboard/src/dashboard/components/: alert_panel.py  sentiment_gauge.py  stream_card.py  transcript_viewer.py
services/dashboard/src/dashboard/pages/: analytics.py  live_view.py  search.py  settings.py
services/dashboard/src/hooks/: useScrollReveal.ts
services/dashboard/src/lib/: AuthContext.tsx  api.ts  firebase.ts
services/dashboard/src/pages/: AlertsPage.tsx  AuthPage.tsx  ChannelsPage.tsx  Dashboard.tsx  Landing.tsx  LoginPage.tsx  RulesPage.tsx  SearchPage.tsx  StreamsPage.tsx  TabbedDashboard.tsx
services/dashboard/tests/: test_dashboard.py
services/diarization/: Dockerfile  pyproject.toml
services/diarization/src/diarization/: __init__.py  external_metadata.py  health.py  main.py  pyannote_pipeline.py  speaker_merger.py
services/diarization/tests/: conftest.py  test_diarization.py  test_external_metadata.py  test_health.py  test_main.py  test_pyannote_pipeline.py  test_speaker_merger.py
services/ingestion/: .coverage  Dockerfile  pyproject.toml
services/ingestion/src/ingestion/: __init__.py  audio_extractor.py  chunk_producer.py  health.py  main.py  reconnection.py  stream_manager.py
services/ingestion/tests/: conftest.py  test_audio_extractor.py  test_chunk_producer.py  test_health.py  test_reconnection.py  test_stream_manager.py
services/nlp/: Dockerfile  pyproject.toml
services/nlp/src/nlp/: __init__.py  aho_corasick_index.py  deduplication.py  fuzzy_matcher.py  health.py  intent_engine.py  keyword_engine.py  main.py  pii_redactor.py  regex_matcher.py  rule_loader.py  sentiment_engine.py  sliding_window.py
services/nlp/tests/: conftest.py  test_aho_corasick_index.py  test_deduplication.py  test_fuzzy_matcher.py  test_keyword_engine.py  test_pii_redactor.py  test_regex_matcher.py  test_sentiment_engine.py  test_sliding_window.py
services/storage/: Dockerfile  pyproject.toml
services/storage/src/storage/: __init__.py  alert_writer.py  audit_hasher.py  es_indexer.py  health.py  main.py  transcript_writer.py
services/storage/tests/: conftest.py  test_alert_writer.py  test_audit_hasher.py  test_es_indexer.py  test_health.py  test_storage.py  test_transcript_writer.py
services/vad/: Dockerfile  pyproject.toml
services/vad/src/vad/: __init__.py  health.py  main.py  silero_vad.py  vad_processor.py
services/vad/tests/: conftest.py  test_health.py  test_silero_vad.py  test_vad_processor.py
tests/: conftest.py
tests/e2e/: test_keyword_alert_slack.py  test_pii_redaction_audit.py  test_rtsp_to_dashboard.py
tests/integration/: conftest.py  test_asr_to_nlp.py  test_full_pipeline.py  test_ingestion_to_asr.py  test_nlp_to_alerts.py  test_storage_search.py
yt_worker/: README.md  requirements.txt  start_worker.bat  worker.py
