[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxsentinel-alerts"
version = "0.1.0"
description = "Alert dispatch service for VoxSentinel — routes alerts to configured channels"
requires-python = ">=3.11"
dependencies = [
    "tg-common",
    "httpx>=0.27",
    "slack-sdk>=3.30",
    "websockets>=12.0",
    "celery>=5.4",
    "tenacity>=8.2",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "redis>=5.0",
    "uvicorn>=0.30",
    "fastapi>=0.111",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alerts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
