[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxsentinel-api"
version = "0.1.0"
description = "REST API gateway for VoxSentinel — FastAPI-based HTTP and WebSocket server"
requires-python = ">=3.11"
dependencies = [
    "tg-common",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "elasticsearch[async]>=8.13",
    "httpx>=0.27",
    "websockets>=12.0",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
