[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxsentinel-dashboard"
version = "0.1.0"
description = "Operator dashboard for VoxSentinel — Streamlit-based real-time monitoring UI"
requires-python = ">=3.12"
dependencies = [
    "tg-common",
    "streamlit>=1.35",
    "websockets>=12.0",
    "httpx>=0.27",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
