[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxsentinel-diarization"
version = "0.1.0"
description = "Speaker diarization service for VoxSentinel — identifies and labels speakers"
requires-python = ">=3.11"
dependencies = [
    "tg-common",
    "pyannote.audio>=3.3",
    "speechbrain>=1.0",
    "torch>=2.3",
    "numpy>=1.26",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "redis>=5.0",
    "uvicorn>=0.30",
    "fastapi>=0.111",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/diarization"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
