[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxsentinel-storage"
version = "0.1.0"
description = "Storage and indexing service for VoxSentinel — persists transcripts and indexes for search"
requires-python = ">=3.11"
dependencies = [
    "tg-common",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "elasticsearch[async]>=8.13",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "redis>=5.0",
    "uvicorn>=0.30",
    "fastapi>=0.111",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/storage"]
