[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxsentinel-vad"
version = "0.1.0"
description = "Voice Activity Detection service for VoxSentinel — filters non-speech audio"
requires-python = ">=3.11"
dependencies = [
    "tg-common",
    "torch>=2.3",
    "torchaudio>=2.3",
    "numpy>=1.26",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "redis>=5.0",
    "uvicorn>=0.30",
    "fastapi>=0.111",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/vad"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
import_mode = "importlib"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
